Refactor color scheme to use custom color #009C88 across multiple components for consistency in UI design

--- a/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/v2/components/breadcrumbs/breadcrumbs.component.html
@@ -14,7 +14,7 @@
             <ng-container *ngIf="!last; else lastBreadcrumb">
               <a
                 [routerLink]="breadcrumb.url"
-                class="inline-flex items-center text-sm font-medium text-gray-600 hover:text-blue-600 transition-colors duration-300"
+                class="inline-flex items-center text-sm font-medium text-gray-600 hover:text-[#009C88] transition-colors duration-300"
                 [attr.aria-current]="last ? 'page' : null"
               >
                 <!-- Icono de Inicio (solo para la primera miga de pan) -->
