--- a/src/app/v2/components/extras/extras.component.html
+++ b/src/app/v2/components/extras/extras.component.html
@@ -33,7 +33,7 @@
     </p>
     <a
       href="#"
-      class="bg-blue-500 text-white px-6 py-2  hover:bg-blue-600 transition duration-300"
+      class="bg-blue-500 text-white px-6 py-2  hover:bg-[#009C88] transition duration-300"
       >Explorar Más</a
     >
   </div>
@@ -177,7 +177,7 @@
     </p>
     <a
       href="#"
-      class="bg-blue-500 text-white px-6 py-2  hover:bg-blue-600 transition duration-300"
+      class="bg-blue-500 text-white px-6 py-2  hover:bg-[#009C88] transition duration-300"
       >Comenzar</a
     >
   </div>
@@ -252,7 +252,7 @@
   </p>
   <a
     href="#"
-    class="bg-blue-500 text-white px-6 py-2  hover:bg-blue-600 transition duration-300"
+    class="bg-blue-500 text-white px-6 py-2  hover:bg-[#009C88] transition duration-300"
     >Buscar Proveedores</a
   >
 </div>
@@ -380,7 +380,7 @@
       </p>
       <a
         href="#"
-        class="bg-blue-500 text-white px-6 py-2  hover:bg-blue-600 transition duration-300"
+        class="bg-blue-500 text-white px-6 py-2  hover:bg-[#009C88] transition duration-300"
         >Registrarse</a
       >
     </div>
@@ -426,7 +426,7 @@
           Descripción breve del artículo. Puede incluir un resumen o detalles
           clave.
         </p>
-        <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold"
+        <a href="#" class="text-blue-500 hover:text-[#009C88] font-semibold"
           >Leer más →</a
         >
       </div>
@@ -444,7 +444,7 @@
           Descripción breve del artículo. Puede incluir un resumen o detalles
           clave.
         </p>
-        <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold"
+        <a href="#" class="text-blue-500 hover:text-[#009C88] font-semibold"
           >Leer más →</a
         >
       </div>
@@ -462,7 +462,7 @@
           Descripción breve del artículo. Puede incluir un resumen o detalles
           clave.
         </p>
-        <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold"
+        <a href="#" class="text-blue-500 hover:text-[#009C88] font-semibold"
           >Leer más →</a
         >
       </div>
