--- a/src/app/v2/components/financing-item/financing-item.component.html
+++ b/src/app/v2/components/financing-item/financing-item.component.html
@@ -71,7 +71,7 @@
       <span class="bg-green-50 text-green-600 px-2 py-1 text-xs ">Financiamiento: Público</span>
     }
     @if (data.tipo_financiamiento.toLowerCase() === 'privado') {
-      <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs ">Financiamiento: Privado</span>
+      <span class="bg-blue-50 text-[#009C88] px-2 py-1 text-xs ">Financiamiento: Privado</span>
     }
     @if (data.institucion) {
       <span class="bg-gray-50 text-gray-700 px-2 py-1 text-xs ">Institución: {{ data.institucion }}</span>
