--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -330,7 +330,7 @@
       </p>
       <a
         href="#"
-        class="bg-blue-500 text-white px-6 py-2  hover:bg-blue-600 transition duration-300"
+        class="bg-blue-500 text-white px-6 py-2  hover:bg-[#009C88] transition duration-300"
         >Evaluar Ahora</a
       >
     </div>
