--- a/src/app/v2/components/projects-item/projects-item.component.html
+++ b/src/app/v2/components/projects-item/projects-item.component.html
@@ -67,7 +67,7 @@
   <!-- Etiquetas de los articulos -->
   <div class="mb-3 flex flex-wrap gap-2">
     @if(data.origen_) {
-    <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs ">
+    <span class="bg-blue-50 text-[#009C88] px-2 py-1 text-xs ">
       Origen: {{ data.origen_ }}
     </span>
     }
