--- a/src/app/v2/components/startup-item/startup-item.component.html
+++ b/src/app/v2/components/startup-item/startup-item.component.html
@@ -70,7 +70,7 @@
       <span class="bg-purple-50 text-purple-600 px-2 py-1 text-xs ">{{ data.tipo }}</span>
     }
     @if (data.sectores) {
-      <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs ">Sectores: {{ data.sectores }}</span>
+      <span class="bg-blue-50 text-[#009C88] px-2 py-1 text-xs ">Sectores: {{ data.sectores }}</span>
     }
     @if (data.tecnologias) {
       <span class="bg-emerald-50 text-emerald-600 px-2 py-1 text-xs ">Tecnologías: {{ data.tecnologias }}</span>
