--- a/src/app/v2/components/startup-modal/startup-modal.component.html
+++ b/src/app/v2/components/startup-modal/startup-modal.component.html
@@ -39,7 +39,7 @@
       <!-- Modal body -->
       <div class="p-4 md:p-5 space-y-4">
         <p class="mb-1 flex flex-wrap gap-1">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs"
             >Región que opera: {{ data?.region }}</span
           >
         </p>
@@ -69,10 +69,10 @@
           </p>
         </div>
         <p class="mb-1 flex flex-wrap gap-1">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs"
             >Sectores que atiende: {{ data?.sectores }}</span
           >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs"
             >Tecnologías que utiliza: {{ data?.tecnologias }}</span
           >
         </p>
@@ -112,7 +112,7 @@
         <button
           type="button"
           (click)="onShowNext()"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-[#009C88] hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-[#009C88] dark:hover:bg-[#009C88] dark:focus:ring-blue-800"
         >
           Siguiente
           <svg
