--- a/src/app/v2/modules/landing-page3/landing-page3.component.html
+++ b/src/app/v2/modules/landing-page3/landing-page3.component.html
@@ -84,7 +84,7 @@
             }
             @if (activeTab === 'projects') {
               @if (item?.estado) {
-              <span class="bg-blue-100 text-blue-700 px-2 py-1 text-xs font-medium rounded">{{ item.estado }}</span>
+              <span class="bg-blue-100 text-[#009C88] px-2 py-1 text-xs font-medium rounded">{{ item.estado }}</span>
               }
               @if (item?.sector) {
               <span class="bg-gray-100 text-gray-700 px-2 py-1 text-xs font-medium rounded">{{ item.sector }}</span>
