--- a/src/app/v2/components/article-item/article-item.component.html
+++ b/src/app/v2/components/article-item/article-item.component.html
@@ -60,7 +60,7 @@
       <span class="bg-green-50 text-orange-600 px-2 py-1  ">Recomendado</span>
     }
     @if (data.idioma.toLowerCase() === 'ingles') {
-      <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs ">En Inglés</span>
+      <span class="bg-blue-50 text-[#009C88] px-2 py-1 text-xs ">En Inglés</span>
     }
     @if (data.articulo_paper.toLowerCase() === 'paper') {
       <span class="bg-purple-50 text-purple-600 px-2 py-1 text-xs ">Paper</span>
