--- a/src/app/v2/components/course-modal/course-modal.component.html
+++ b/src/app/v2/components/course-modal/course-modal.component.html
@@ -39,28 +39,28 @@
       <div class="p-4 md:p-5 space-y-4">
         <p class="mb-1 flex flex-wrap gap-1">
           @if (data.idioma.toLowerCase() === 'ingles') {
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             En Inglés
           </span>
           } @if (data.tipo.toLowerCase() === 'de pago') {
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             De Pago
           </span>
           } @if(data.tipo.toLowerCase() === 'gratuito'){
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Gratuito
           </span>
           } @if(data.modalidad.toLowerCase() === 'online'){
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Online
           </span>
           } @if(data.modalidad.toLowerCase() === 'presencial'){
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Presencial
           </span>
           } @for (tipo of data.tipo_de_conocimiento; track $index) {
           <span
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs"
             style="margin-right: 4px"
           >
             {{ tipo }}
@@ -115,7 +115,7 @@
         <button
           type="button"
           (click)="onShowNext()"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-[#009C88] hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-[#009C88] dark:hover:bg-[#009C88] dark:focus:ring-blue-800"
         >
           Siguiente
           <svg
