--- a/src/app/v2/components/financing-modal/financing-modal.component.html
+++ b/src/app/v2/components/financing-modal/financing-modal.component.html
@@ -40,19 +40,19 @@
       <!-- Modal body -->
       <div class="p-4 md:p-5 space-y-4">
         <p class="mb-1 flex flex-wrap gap-1">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs"
             >Institución: {{ data.institucion }}</span
           >
           @if (data.categoria) {
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Categoría: {{ data.categoria }}
           </span>
           } @if (data.tipo_financiamiento) {
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Tipo de Financiamiento: {{ data.tipo_financiamiento }}
           </span>
           } @if (data.nivel_de_complejidad_) {
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
+          <span class="border border-blue-100 text-[#009C88] px-2 py-1 text-xs">
             Nivel de Complejidad: {{ data.nivel_de_complejidad_ }}
           </span>
           }
@@ -109,7 +109,7 @@
         <button
           type="button"
           (click)="onShowNext()"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-[#009C88] hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-[#009C88] dark:hover:bg-[#009C88] dark:focus:ring-blue-800"
         >
           Siguiente
           <svg
